crates/filekind-core/tests/snapshots/golden__zipped__README_md.snap
---
source: crates/filekind-core/tests/golden.rs
expression: text
---
# Studio Project — installing the `.studioproj` file type

Generated by filekind 0.5.0 — do not edit.
Source: Studio Project (.studioproj)
Regenerate with: filekind build

| | |
|---|---|
| Extension | `.studioproj` |
| MIME type | `application/vnd.example.studioproj` |
| Container | `zip` |
| Scope | current user only |
| Targets | windows, linux |

Nothing in this directory has been installed. filekind is a compiler: it emits
artifacts, and you decide whether to run them. Every install step below has a
matching uninstall step.


## Windows

```
windows/
├── register.reg        double-click, or: reg import register.reg
├── unregister.reg      the undo
├── inno-snippet.iss    paste into an Inno Setup script
├── nsis-snippet.nsh    !include from an NSIS script
```

1. Read `register.reg`. It writes to `HKEY_CURRENT_USER` only — no elevation, nothing outside your own profile.
2. Run it: double-click, or `reg import windows\register.reg`.
3. Restart `explorer.exe` if the new icon or type name does not appear.

**About defaults.** `register.reg` makes `.studioproj` appear in Explorer's
*Open with* list and gives it a name, a description.
It does **not** make anything the
default handler, because Windows 10 and later do not allow that from a script.
The user picks a default in *Settings → Apps → Default apps*. Tools that work
around this get flagged as malware; filekind will not ship a friendlier version
of that.

**About the icon.** No `DefaultIcon` was written: `[windows].icon_path` is unset
and there is no handler executable to borrow an icon from. A loose `.reg` cannot
know where your installer will put `icon.ico`. Either set `[windows].icon_path`
in the spec and regenerate, or use the Inno/NSIS snippet, which knows its own
install directory.

To undo: run `windows\unregister.reg`.


## Linux

```
linux/
├── studio-project-mime.xml
├── studio-project.desktop
├── install.sh
├── uninstall.sh
```

```sh
cd linux
./install.sh
```

The script calls `xdg-mime` and `xdg-icon-resource` — the same tools a `.deb`
would — and writes to `${XDG_DATA_HOME:-$HOME/.local/share}`. It never edits the MIME database
directly. Read it first; it is about forty lines.

Requires `xdg-utils`. Debian/Ubuntu: `apt install xdg-utils`.
Fedora: `dnf install xdg-utils`.

Check it worked:

```sh
xdg-mime query filetype yourfile.studioproj     # → application/vnd.example.studioproj
```

To undo: `./uninstall.sh`


## Content detection (`file`)

`magic.txt` is a libmagic pattern.

```sh
file --magic-file magic.txt yourfile.studioproj
cat magic.txt >> ~/.magic && file --compile ~/.magic   # install for your user
```

The spec declares no magic bytes, so the pattern is a comment explaining why.
Add `magic = "…"` to `[format]` and regenerate.


---

Regenerate everything here with `filekind build`. Edit the spec, not these
files.
