crates/filekind-core/tests/snapshots/golden__zipped__linux_packaging_build-deb_sh.snap
---
source: crates/filekind-core/tests/golden.rs
expression: text
---
#!/bin/sh
# Generated by filekind 0.5.0 — do not edit.
# Source: Studio Project (.studioproj)
# Regenerate with: filekind build
#
# Assembles a .deb from the files filekind already generated in ../ .
# Nothing is duplicated on disk until you run this.
#
#     cd linux/packaging && ./build-deb.sh
#
# Requires dpkg-deb (Debian/Ubuntu, or the `dpkg` package elsewhere).

set -eu

here=$(CDPATH= cd -- "$(dirname -- "$0")" && pwd)
linux_dir=$(CDPATH= cd -- "$here/.." && pwd)
pkg="studio-project-mime_1.0_all"
root="$here/build/$pkg"

command -v dpkg-deb >/dev/null 2>&1 || {
    printf 'filekind: dpkg-deb not found\n' >&2
    exit 1
}

rm -rf "$here/build"
mkdir -p "$root/DEBIAN" \
         "$root/usr/share/mime/packages" \
         "$root/usr/share/applications"

install -m 644 "$here/deb/control"  "$root/DEBIAN/control"
install -m 755 "$here/deb/postinst" "$root/DEBIAN/postinst"
install -m 755 "$here/deb/postrm"   "$root/DEBIAN/postrm"

install -m 644 "$linux_dir/studio-project-mime.xml"    "$root/usr/share/mime/packages/studio-project-mime.xml"
install -m 644 "$linux_dir/studio-project.desktop" "$root/usr/share/applications/studio-project.desktop"

if [ -d "$linux_dir/icons" ]; then
    for size in 16 22 24 32 48 64 128 256 ; do
        src="$linux_dir/icons/hicolor/${size}x${size}/mimetypes/application-vnd.example.studioproj.png"
        [ -f "$src" ] || continue
        dest="$root/usr/share/icons/hicolor/${size}x${size}/mimetypes"
        mkdir -p "$dest"
        install -m 644 "$src" "$dest/"
    done
fi

dpkg-deb --build --root-owner-group "$root"
printf 'Built %s\n' "$here/build/$pkg.deb"
