crates/filekind-core/tests/snapshots/golden__zipped__linux_packaging_deb_control.snap
---
source: crates/filekind-core/tests/golden.rs
expression: text
---
Package: studio-project-mime
Version: 1.0
Section: misc
Priority: optional
Architecture: all
Depends: shared-mime-info, desktop-file-utils
Maintainer: filekind <nobody@example.invalid>
Description: Studio Project file type registration
 Registers the .studioproj extension as application/vnd.example.studioproj on this system,
 including the shared-mime-info entry, the desktop entry and the hicolor
 icons.
 .
 Generated by filekind [VERSION]. Edit the .filekind spec and
 regenerate rather than patching this package.
