crates/filekind-core/tests/snapshots/golden__zipped__linux_packaging_deb_postrm.snap
---
source: crates/filekind-core/tests/golden.rs
expression: text
---
#!/bin/sh
# Generated by filekind 0.5.0 — do not edit.
# Source: Studio Project (.studioproj)
# Regenerate with: filekind build
set -e

if [ "$1" = "remove" ] || [ "$1" = "purge" ]; then
    if command -v update-mime-database >/dev/null 2>&1; then
        update-mime-database /usr/share/mime || true
    fi
    if command -v update-desktop-database >/dev/null 2>&1; then
        update-desktop-database /usr/share/applications || true
    fi
    if command -v gtk-update-icon-cache >/dev/null 2>&1; then
        gtk-update-icon-cache -q -t -f /usr/share/icons/hicolor || true
    fi
fi

#DEBHELPER#
exit 0
