crates/filekind-core/tests/snapshots/golden__zipped__linux_packaging_studio-project-mime_spec.snap
---
source: crates/filekind-core/tests/golden.rs
expression: text
---
# Generated by filekind [VERSION] — do not edit.
# Source: Studio Project (.studioproj)
# Regenerate with: filekind build
#
# Build with:
#     tar czf ~/rpmbuild/SOURCES/studio-project-mime-1.0.tar.gz \
#         --transform 's,^linux,studio-project-mime-1.0,' linux
#     rpmbuild -bb studio-project-mime.spec

Name:           studio-project-mime
Version:        1.0
Release:        1%{?dist}
Summary:        Studio Project file type registration

License:        MIT
BuildArch:      noarch
Source0:        %{name}-%{version}.tar.gz

Requires:       shared-mime-info
Requires:       desktop-file-utils
BuildRequires:  desktop-file-utils

%description
Registers the .studioproj extension as application/vnd.example.studioproj, including the
shared-mime-info entry, the desktop entry and the hicolor icons.

Generated by filekind [VERSION]. Edit the .filekind spec and
regenerate rather than patching this spec file.

%prep
%setup -q

%install
install -Dm644 studio-project-mime.xml %{buildroot}%{_datadir}/mime/packages/studio-project-mime.xml
desktop-file-install --dir=%{buildroot}%{_datadir}/applications studio-project.desktop

if [ -f icons/hicolor/16x16/mimetypes/application-vnd.example.studioproj.png ]; then
  install -Dm644 icons/hicolor/16x16/mimetypes/application-vnd.example.studioproj.png \
    %{buildroot}%{_datadir}/icons/hicolor/16x16/mimetypes/application-vnd.example.studioproj.png
fi
if [ -f icons/hicolor/22x22/mimetypes/application-vnd.example.studioproj.png ]; then
  install -Dm644 icons/hicolor/22x22/mimetypes/application-vnd.example.studioproj.png \
    %{buildroot}%{_datadir}/icons/hicolor/22x22/mimetypes/application-vnd.example.studioproj.png
fi
if [ -f icons/hicolor/24x24/mimetypes/application-vnd.example.studioproj.png ]; then
  install -Dm644 icons/hicolor/24x24/mimetypes/application-vnd.example.studioproj.png \
    %{buildroot}%{_datadir}/icons/hicolor/24x24/mimetypes/application-vnd.example.studioproj.png
fi
if [ -f icons/hicolor/32x32/mimetypes/application-vnd.example.studioproj.png ]; then
  install -Dm644 icons/hicolor/32x32/mimetypes/application-vnd.example.studioproj.png \
    %{buildroot}%{_datadir}/icons/hicolor/32x32/mimetypes/application-vnd.example.studioproj.png
fi
if [ -f icons/hicolor/48x48/mimetypes/application-vnd.example.studioproj.png ]; then
  install -Dm644 icons/hicolor/48x48/mimetypes/application-vnd.example.studioproj.png \
    %{buildroot}%{_datadir}/icons/hicolor/48x48/mimetypes/application-vnd.example.studioproj.png
fi
if [ -f icons/hicolor/64x64/mimetypes/application-vnd.example.studioproj.png ]; then
  install -Dm644 icons/hicolor/64x64/mimetypes/application-vnd.example.studioproj.png \
    %{buildroot}%{_datadir}/icons/hicolor/64x64/mimetypes/application-vnd.example.studioproj.png
fi
if [ -f icons/hicolor/128x128/mimetypes/application-vnd.example.studioproj.png ]; then
  install -Dm644 icons/hicolor/128x128/mimetypes/application-vnd.example.studioproj.png \
    %{buildroot}%{_datadir}/icons/hicolor/128x128/mimetypes/application-vnd.example.studioproj.png
fi
if [ -f icons/hicolor/256x256/mimetypes/application-vnd.example.studioproj.png ]; then
  install -Dm644 icons/hicolor/256x256/mimetypes/application-vnd.example.studioproj.png \
    %{buildroot}%{_datadir}/icons/hicolor/256x256/mimetypes/application-vnd.example.studioproj.png
fi

%files
%{_datadir}/mime/packages/studio-project-mime.xml
%{_datadir}/applications/studio-project.desktop
%{_datadir}/icons/hicolor/*/mimetypes/application-vnd.example.studioproj.png

%post
/usr/bin/update-mime-database %{_datadir}/mime &>/dev/null || :
/usr/bin/update-desktop-database %{_datadir}/applications &>/dev/null || :
/usr/bin/gtk-update-icon-cache -q -t -f %{_datadir}/icons/hicolor &>/dev/null || :

%postun
/usr/bin/update-mime-database %{_datadir}/mime &>/dev/null || :
/usr/bin/update-desktop-database %{_datadir}/applications &>/dev/null || :
/usr/bin/gtk-update-icon-cache -q -t -f %{_datadir}/icons/hicolor &>/dev/null || :

%changelog
* Thu Jan 01 1970 filekind <nobody@example.invalid> - 1.0-1
- Generated by filekind [VERSION]
