crates/filekind-core/tests/snapshots/golden__zipped__linux_studio-project-mime_xml.snap
---
source: crates/filekind-core/tests/golden.rs
expression: text
---
<?xml version="1.0" encoding="UTF-8"?>
<!--
Generated by filekind [VERSION] — do not edit.
Source: Studio Project (.studioproj)
Regenerate with: filekind build
-->
<mime-info xmlns="http://www.freedesktop.org/standards/shared-mime-info">
  <mime-type type="application/vnd.example.studioproj">
    <comment>Studio project bundle</comment>
    <glob pattern="*.studioproj"/>
    <icon name="application-vnd.example.studioproj"/>
    <generic-icon name="package-x-generic"/>
  </mime-type>
</mime-info>
