crates/filekind-core/tests/snapshots/golden__zipped__linux_studio-project_desktop.snap
---
source: crates/filekind-core/tests/golden.rs
expression: text
---
[Desktop Entry]
Version=1.5
Type=Application
Name=Studio Project
Comment=Studio project bundle
Exec=xdg-open %f
Icon=application-vnd.example.studioproj
Terminal=false
NoDisplay=false
MimeType=application/vnd.example.studioproj;
Categories=Utility;
