crates/filekind-core/tests/snapshots/golden__zipped__magic_txt.snap
---
source: crates/filekind-core/tests/golden.rs
expression: text
---
# Generated by filekind [VERSION] — do not edit.
# Source: Studio Project (.studioproj)
# Regenerate with: filekind build
#
# libmagic pattern for Studio Project. This is what makes `file` and anything
# built on it — Nautilus, Dolphin, `xdg-mime query filetype` — recognise the
# format by content rather than by extension.
#
# Try it without installing:
#     file --magic-file magic.txt yourfile.studioproj
#
# Install for your user:
#     cat magic.txt >> ~/.magic && file --compile ~/.magic
#
# The spec declares no magic bytes, so there is nothing to match on at
# offset 0. All that is left is the extension, which `file` will not use.
# The container is zip, so files start with PK\003\004 and `file` will
# report application/zip. Distinguishing a .studioproj from any other
# zip needs a look inside the archive — that is a job for a real parser
# (see the [schema] table and Kaitai Struct), not for a magic pattern.
